// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MovieViewer > Snapshot Tests > should render MovieViewer with multiple movies 1`] = `
<div
  class="movie-viewer"
>
  <div
    class="movie-nav-controls"
  >
    <button
      aria-label="Previous movie"
      class="nav-btn nav-btn--prev"
    >
      ← Previous
    </button>
    <div
      class="movie-position"
    >
      <span
        class="position-text"
      >
        1
         of 
        3
      </span>
    </div>
    <button
      aria-label="Next movie"
      class="nav-btn nav-btn--next"
    >
      Next →
    </button>
  </div>
  <div
    class="movie-display"
  >
    <article
      class="movie-card movie-card--large"
    >
      <figure
        class="movie-card__image-container"
      >
        <img
          alt="First Movie poster"
          class="movie-card__image"
          loading="lazy"
          src="mocked-image-url"
        />
      </figure>
      <section
        class="movie-card__content"
      >
        <h2
          class="movie-card__title"
        >
          First Movie
        </h2>
        <aside
          class="movie-card__meta"
        >
          <span
            class="movie-card__year"
          >
            2023
          </span>
          <span
            aria-label="Rating: 8.5 out of 10"
            class="movie-card__rating"
          >
            ★ 
            8.5
            /10
          </span>
        </aside>
        <div
          class="movie-card__overview-container"
        >
          <p
            class="movie-card__overview "
          >
            First movie description that is long enough to test truncation behavior
          </p>
        </div>
      </section>
    </article>
  </div>
  <div
    class="movie-jump-controls"
  >
    <label
      class="jump-label"
      for="movie-select"
    >
      Jump to movie:
    </label>
    <select
      class="movie-select"
      id="movie-select"
    >
      <option
        value="0"
      >
        1
        . 
        First Movie
      </option>
      <option
        value="1"
      >
        2
        . 
        Second Movie
      </option>
      <option
        value="2"
      >
        3
        . 
        Third Movie
      </option>
    </select>
  </div>
  <div
    class="keyboard-hint"
  >
    <p>
      Use ← → arrow keys to navigate
    </p>
  </div>
</div>
`;

exports[`MovieViewer > Snapshot Tests > should render MovieViewer with no movies 1`] = `
<div
  class="movie-viewer"
>
  <p
    class="no-movies"
  >
    No movies available
  </p>
</div>
`;

exports[`MovieViewer > Snapshot Tests > should render MovieViewer with single movie 1`] = `
<div
  class="movie-viewer"
>
  <div
    class="movie-nav-controls"
  >
    <button
      aria-label="Previous movie"
      class="nav-btn nav-btn--prev"
      disabled=""
    >
      ← Previous
    </button>
    <div
      class="movie-position"
    >
      <span
        class="position-text"
      >
        1
         of 
        1
      </span>
    </div>
    <button
      aria-label="Next movie"
      class="nav-btn nav-btn--next"
      disabled=""
    >
      Next →
    </button>
  </div>
  <div
    class="movie-display"
  >
    <article
      class="movie-card movie-card--large"
    >
      <figure
        class="movie-card__image-container"
      >
        <img
          alt="First Movie poster"
          class="movie-card__image"
          loading="lazy"
          src="mocked-image-url"
        />
      </figure>
      <section
        class="movie-card__content"
      >
        <h2
          class="movie-card__title"
        >
          First Movie
        </h2>
        <aside
          class="movie-card__meta"
        >
          <span
            class="movie-card__year"
          >
            2023
          </span>
          <span
            aria-label="Rating: 8.5 out of 10"
            class="movie-card__rating"
          >
            ★ 
            8.5
            /10
          </span>
        </aside>
        <div
          class="movie-card__overview-container"
        >
          <p
            class="movie-card__overview "
          >
            First movie description that is long enough to test truncation behavior
          </p>
        </div>
      </section>
    </article>
  </div>
  <div
    class="movie-jump-controls"
  >
    <label
      class="jump-label"
      for="movie-select"
    >
      Jump to movie:
    </label>
    <select
      class="movie-select"
      disabled=""
      id="movie-select"
    >
      <option
        value="0"
      >
        1
        . 
        First Movie
      </option>
    </select>
  </div>
  <div
    class="keyboard-hint"
  >
    <p>
      Use ← → arrow keys to navigate
    </p>
  </div>
</div>
`;
